# omniFUSE

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cgofuse-to-unifuse-porting.md  omnifuse-architecture.md  rclone-lessons-and-tests.md  rustfmt.toml
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.sisyphus/plans/: test-coverage-gaps.md
.sourcecraft/: ci.yaml
.swarm/: state.json
crates/omnifuse-app/: Cargo.toml
crates/omnifuse-app/src/: environment.rs  lib.rs  mount_layout.rs  mount_service.rs
crates/omnifuse-app/src/daemon/: client.rs  mod.rs  mount_table.rs  paths.rs  protocol.rs  server.rs
crates/omnifuse-app/tests/: daemon_server.rs
crates/omnifuse-cli/: Cargo.toml
crates/omnifuse-cli/skill/: check.md  for-claude.md  for-langchain.md  for-openai.md  gen-config.md  intro.md  mount-git.md  mount-s3.md  mount-wiki.md  skill.md
crates/omnifuse-cli/src/: main.rs  skill.rs
crates/omnifuse-cli/tests/: cli_tests.rs  real_mount_smoke_tests.rs
crates/omnifuse-core/: Cargo.toml
crates/omnifuse-core/src/: backend.rs  buffer.rs  config.rs  dirty_index.rs  event.rs  events.rs  file_mutations.rs  lib.rs  observability.rs  persistent_cache.rs  sync_engine.rs  test_utils.rs  text_merge.rs  vfs.rs
crates/omnifuse-core/tests/: concurrent_editing_tests.rs  config_tests.rs  e2e_cross_backend_scenarios.rs  e2e_edge_cases.rs  e2e_git_user_scenarios.rs  e2e_pipeline_tests.rs  fuse_mount_tests.rs  honest_fuse_tests.rs  observability_tests.rs  operational_event_tests.rs  real_fuse_tests.rs
crates/omnifuse-git/: Cargo.toml
crates/omnifuse-git/src/: engine.rs  error.rs  filter.rs  lib.rs  ops.rs  repo_source.rs  sync_lifecycle.rs  tracking.rs
crates/omnifuse-git/tests/: backend_integration.rs  error_classification_tests.rs
crates/omnifuse-gui/tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/omnifuse-gui/tauri/capabilities/: default.json
crates/omnifuse-gui/tauri/src/: commands.rs  events.rs  main.rs
crates/omnifuse-gui/web/: eslint.config.js  index.html  package-lock.json  package.json
crates/omnifuse-gui/web/src/: App.css  App.tsx  main.tsx
crates/omnifuse-s3/: Cargo.toml
crates/omnifuse-s3/src/: config.rs  error.rs  lib.rs  manifest.rs  operator.rs  path.rs  session.rs
crates/omnifuse-s3/tests/: backend_tests.rs  minio_matrix_tests.rs  real_s3_smoke_tests.rs
crates/omnifuse-wiki/: Cargo.toml
crates/omnifuse-wiki/src/: client.rs  error.rs  lib.rs  merge.rs  meta.rs  models.rs  page.rs  page_index.rs  session.rs
crates/omnifuse-wiki/tests/: backend_integration.rs  client_tests.rs  e2e_wiki_user_scenarios.rs  error_classification_tests.rs  real_api_tests.rs
crates/omnifuse-wiki/tests/common/: mod.rs
crates/unifuse/: Cargo.toml  README.md
crates/unifuse/src/: compat.rs  inode.rs  lib.rs  rfuse3_adapter.rs  session.rs  types.rs  winfsp_adapter.rs
docs/: s3-backend-spike.md
docs/plans/: persistent-cache-and-daemon.md  product-opportunities.md
docs/superpowers/plans/: 2026-04-06-observability-implementation.md  2026-05-08-architecture-deepening-overview.md  2026-05-08-git-sync-lifecycle.md  2026-05-08-mount-service.md  2026-05-08-remote-refresh-contract.md  2026-05-08-unifuse-session-path-fs.md  2026-05-08-vfs-file-mutation-pipeline.md  2026-05-08-wiki-page-sync-session.md
docs/superpowers/specs/: 2026-04-06-observability-design.md
