[package]
name = "omnifuse-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Application-level mount preparation for OmniFuse"

[lints]
workspace = true

[dependencies]
omnifuse-core = { path = "../omnifuse-core" }
omnifuse-git = { path = "../omnifuse-git" }
omnifuse-wiki = { path = "../omnifuse-wiki" }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
