[package]
name = "omnifuse-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Application-level mount preparation for OmniFuse"

[lints]
workspace = true

[dependencies]
omnifuse-core = { version = "0.2.0", path = "../omnifuse-core" }
omnifuse-git = { version = "0.2.0", path = "../omnifuse-git" }
omnifuse-wiki = { version = "0.2.0", path = "../omnifuse-wiki" }
omnifuse-s3 = { version = "0.2.0", path = "../omnifuse-s3" }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
