[package]
name = "omnifuse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for OmniFuse — a universal VFS utility"

[[bin]]
name = "of"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
omnifuse-core = { path = "../omnifuse-core" }
omnifuse-git = { path = "../omnifuse-git" }
omnifuse-wiki = { path = "../omnifuse-wiki" }
unifuse = { path = "../unifuse" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
