[package]
name = "omnifuse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CLI for OmniFuse — a universal VFS utility"
keywords = ["fuse", "cli", "vfs", "git", "wiki"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "of"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
omnifuse-app = { version = "0.2.0", path = "../omnifuse-app" }
omnifuse-core = { version = "0.2.0", path = "../omnifuse-core" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
omnifuse-wiki = { version = "0.2.0", path = "../omnifuse-wiki" }
predicates = { workspace = true }
tempfile = { workspace = true }
