[package]
name = "omnifuse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ядро OmniFuse: Backend trait, SyncEngine, VFS, FileBufferManager"

[lints]
workspace = true

[dependencies]
unifuse = { path = "../unifuse" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }
xattr = "1"
