[package]
name = "omnifuse-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Git backend for OmniFuse"

[lints]
workspace = true

[dependencies]
omnifuse-core = { path = "../omnifuse-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }
