[package]
name = "omnifuse-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Git backend for OmniFuse"
keywords = ["fuse", "git", "vfs", "sync", "filesystem"]
categories = ["filesystem"]

[lints]
workspace = true

[dependencies]
omnifuse-core = { path = "../omnifuse-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
