[package]
name = "omnifuse-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Git backend for OmniFuse"
keywords = ["fuse", "git", "vfs", "sync", "filesystem"]
categories = ["filesystem"]

[lints]
workspace = true

[dependencies]
omnifuse-core = { version = "0.2.0", path = "../omnifuse-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
