[package]
name = "omnifuse-wiki"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Wiki backend for OmniFuse"
keywords = ["fuse", "wiki", "vfs", "sync", "filesystem"]
categories = ["filesystem"]

[lints]
workspace = true

[dependencies]
omnifuse-core = { path = "../omnifuse-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
diffy = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
