[package]
name = "unifuse"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform async FUSE abstraction (rfuse3 + winfsp-rs)"
readme = "README.md"
repository = "https://github.com/veged/omniFUSE"
keywords = ["fuse", "filesystem", "winfsp", "virtual-filesystem", "async"]
categories = ["filesystem", "os"]
rust-version = "1.85"

[lints]
workspace = true

[features]
default = []

[target.'cfg(unix)'.dependencies]
rfuse3 = { version = "0.0.5", features = ["tokio-runtime"] }
libc = "0.2"
nix = { version = "0.29", features = ["user"] }

[target.'cfg(windows)'.dependencies]
winfsp = "0.12"
windows = { version = "0.58", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security"] }

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
dashmap = "6"
futures-util = "0.3"
