[package]
name = "unifuse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Cross-platform async FUSE abstraction (rfuse3 + winfsp-rs)"
readme = "README.md"
keywords = ["fuse", "filesystem", "winfsp", "virtual-filesystem", "async"]
categories = ["filesystem", "os"]

[lints]
workspace = true

[features]
default = []

[target.'cfg(unix)'.dependencies]
rfuse3 = { version = "0.0.5", features = ["tokio-runtime"] }
libc = "0.2"
nix = { version = "0.29", features = ["user"] }

[target.'cfg(windows)'.dependencies]
winfsp = "0.12"
windows = { version = "0.58", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security"] }

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
dashmap = "6"
futures-util = "0.3"
