[package]
name = "omnifuse-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OmniFuse GUI (Tauri)"

[[bin]]
name = "omnifuse-gui"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
omnifuse-core = { path = "../../omnifuse-core" }
omnifuse-git = { path = "../../omnifuse-git" }
omnifuse-wiki = { path = "../../omnifuse-wiki" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
