[package]
name = "omnifuse-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "OmniFuse GUI (Tauri)"
keywords = ["fuse", "gui", "tauri", "vfs", "filesystem"]
categories = ["gui", "filesystem"]
publish = false

[[bin]]
name = "omnifuse-gui"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
omnifuse-app = { version = "0.2.0", path = "../../omnifuse-app" }
omnifuse-core = { version = "0.2.0", path = "../../omnifuse-core" }
tauri = { version = "2", features = ["test"] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
